--- a/style.css
+++ b/style.css
@@ -5,7 +5,13 @@ body{
 h1{
     font-size: 50px;
 }
-.name-highlite{
+h2{
+    font-size: 40px;
+}
+p{
+    color: dimgray;
+}
+.orange-highlite{
     color: orange;
 }
 .half-width{
@@ -17,4 +23,47 @@ h1{
 .half-width img{
     width: 100%;
     padding-top: 100px;
+}
+.top-banner{
+    background-image: url("images/top-banner.png");
+    background-repeat: no-repeat;
+}
+section{
+    height: 500px;
+    padding-bottom: 100px;
+}
+.link-button{
+    text-decoration:none;
+    background-image:linear-gradient(45deg, lightSalmon, tomato);
+    padding: 10px 20px;
+    border-radius: 5px;
+    color: white;
+    font-weight: bold;
+}
+.dream-area{
+    background-image: url("images/dream-bg.png");
+    background-repeat: no-repeat;
+    background-position: right;
+}
+.new{
+    margin-left:65px;
+    color: hotpink;
+}
+.single-experience{
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 5px;
+    height: 80%;
+    background-color:whitesmoke;
+}
+.area{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+#for{
+    border-left: 7px solid;
+    border-image: linear-gradient(lightSalmon, tomato);
+}
+footer p{
+    text-align: center;
 }
